use chipersoft's wmd branch

--- a/media/js/wmd/wmd.css
+++ b/media/js/wmd/wmd.css
@@ -1,10 +1,8 @@
-body 
-{ 
-	background-color: White
-}
 
 .wmd-panel
 {
+	margin-left: 25%;
+	margin-right: 25%;
 	width: 50%;
 	min-width: 500px;
 }
@@ -14,13 +12,15 @@ body
 	background-color: Aquamarine;
 }
 
-#wmd-button-bar 
+.wmd-button-bar 
 {
 	width: 100%;
-	background-color: #ffffff;
+	/*
+	background-color: Silver; 
+	*/
 }
 
-#wmd-input 
+.wmd-input 
 { 
 	height: 500px;
 	width: 100%;
@@ -28,17 +28,17 @@ body
 	border: 1px solid DarkGray;
 }
 
-#wmd-preview 
+.wmd-preview 
 { 
-	background-color: LightSkyBlue; 
+	background-color: LightGray; 
 }
 
-#wmd-output 
+.wmd-output 
 { 
 	background-color: Pink;
 }
 
-#wmd-button-row 
+.wmd-button-row 
 {
 	position: relative; 
 	margin-left: 5px;
@@ -47,18 +47,18 @@ body
 	margin-top: 10px;
 	padding: 0px;  
 	height: 20px;
-    background-color:#ffffff;
 }
 
 .wmd-spacer
 {
 	width: 1px; 
 	height: 20px; 
-	margin-left: 14px;
+	margin-left: 7px;
+	margin-right:7px;
 	
-	position: absolute;
-    background-color:#aaaaaa;
-	display: inline-block;
+	position: relative;
+	background-color: Silver;
+	display: inline-block; 
 	list-style: none;
 }
 
@@ -68,8 +68,8 @@ body
 	height: 20px; 
 	margin-left: 5px;
 	margin-right: 5px;
-    background-color:#ffffff;
-	position: absolute;
+	
+	position: relative;
 	background-image: url(images/wmd-buttons.png);
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
@@ -83,29 +83,29 @@ body
 	height: 20px; 
 	margin-left: 5px;
 	margin-right: 5px;
-
+	
 	position: absolute;
 	display: inline-block; 
 }
 
 
 /* sprite button slicing style information */
-#wmd-button-bar #wmd-bold-button    {left: 0px;   background-position: 0px 0;}
-#wmd-button-bar #wmd-italic-button  {left: 25px;  background-position: -20px 0;}
-#wmd-button-bar #wmd-spacer1        {left: 50px;}
-#wmd-button-bar #wmd-link-button    {left: 75px;  background-position: -40px 0;}
-#wmd-button-bar #wmd-quote-button   {left: 100px;  background-position: -60px 0;}
-#wmd-button-bar #wmd-code-button    {left: 125px;  background-position: -80px 0;}
-#wmd-button-bar #wmd-image-button   {left: 150px;  background-position: -100px 0;}
-#wmd-button-bar #wmd-spacer2        {left: 175px;}
-#wmd-button-bar #wmd-olist-button   {left: 200px;  background-position: -120px 0;}
-#wmd-button-bar #wmd-ulist-button   {left: 225px; background-position: -140px 0;}
-#wmd-button-bar #wmd-heading-button {left: 250px; background-position: -160px 0;}
-#wmd-button-bar #wmd-hr-button      {left: 275px; background-position: -180px 0;}
-#wmd-button-bar #wmd-spacer3        {left: 300px;}
-#wmd-button-bar #wmd-undo-button    {left: 325px; background-position: -200px 0;}
-#wmd-button-bar #wmd-redo-button    {left: 350px; background-position: -220px 0;}
-#wmd-button-bar #wmd-help-button    {right: 0px; background-position: -240px 0;}
+.wmd-bold-button    {background-position: 0px 0;}
+.wmd-italic-button  {background-position: -20px 0;}
+.wmd-spacer1        {}
+.wmd-link-button    {background-position: -40px 0;}
+.wmd-quote-button   {background-position: -60px 0;}
+.wmd-code-button    {background-position: -80px 0;}
+.wmd-image-button   {background-position: -100px 0;}
+.wmd-spacer2        {}
+.wmd-olist-button   {background-position: -120px 0;}
+.wmd-ulist-button   {background-position: -140px 0;}
+.wmd-heading-button {background-position: -160px 0;}
+.wmd-hr-button      {background-position: -180px 0;}
+.wmd-spacer3        {}
+.wmd-undo-button    {background-position: -200px 0;}
+.wmd-redo-button    {background-position: -220px 0;}
+.wmd-help-button    {position:absolute;right: 0px; background-position: -240px 0;}
 
 
 .wmd-prompt-background
