activate chipersoft wmd editor

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,12 @@
 {% load extra_tags ui_registry i18n %}
 
+<script type="text/javascript">
+    setup_wmd({
+        "input": "editor",
+        "button_bar": "wmd-button-bar",
+        "preview": "previewer",
+    });
+</script>
 
 <div>
     <div class="footerLinks" >
