--- a/templates/base_content.html
+++ b/templates/base_content.html
@@ -1,3 +1,4 @@
+x
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- base_content.html -->
 {% load i18n extra_tags extra_filters markup ui_registry %}
@@ -57,6 +58,19 @@
         /* ]] */
         </script>
         <script type='text/javascript' src='{% media  "/media/js/osqa.main.js" %}'></script>
+        <script type="text/javascript" src="/mathjax/MathJax.js">
+            MathJax.Hub.Config({
+                config: ["MMLorHTML.js"],
+                extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
+                jax: ["input/TeX"],
+                tex2jax: {
+                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+                    processEscapes: true
+                },
+                showProcessingMessages: false
+            });
+        </script>
         {% if user_messages %}
         <style type="text/css">
             body { margin-top:2.4em; }
