Move MathJax to the media/js/mathjax directory

--- a/templates/base_content.html
+++ b/templates/base_content.html
@@ -58,7 +58,7 @@ x
         /* ]] */
         </script>
         <script type='text/javascript' src='{% media  "/media/js/osqa.main.js" %}'></script>
-        <script type="text/javascript" src="/mathjax/MathJax.js">
+	<script type="text/javascript" src='{% media  "/media/js/mathjax/MathJax.js" %}'>
             MathJax.Hub.Config({
                 config: ["MMLorHTML.js"],
                 extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
